# SuperProjetCPP

./: .gitmodules  .travis.yml  CMakeLists.txt  DOXYFILE  README.md
boost/: CMakeLists.txt
doc/: CMakeLists.txt  DOXYFILE  generateDocumentationAndDeploy.sh
ez-lib/: CMakeLists.txt  ChangeLog  ez-draw++.cpp  ez-draw++.hpp
html/: __c__make__c__compiler__id__8c_8js.html  __c__make__c__x__x__compiler__id__8cpp_8js.html  __event__8cpp_8js.html  __event__8cpp_8js.js  __font__8cpp_8js.html  __font__8cpp_8js.js  __font__8hpp_8js.html  __font__8hpp_8js.js  __graphics__item__8cpp_8js.html  __graphics__item__8cpp_8js.js  __graphics__item__8hpp_8js_source.html  __graphics__square__8cpp_8js.html  __graphics__square__8cpp_8js.js  __group__points__8hpp_8js.html  __group__points__8hpp_8js.js  __point__8cpp_8js.html  __point__8cpp_8js.js  __point__8hpp_8js.html  __point__8hpp_8js.js  __point__8hpp_8js_source.html  _application_8cpp.html  _application_8cpp__incl.map  _application_8cpp__incl.md5  _application_8cpp_source.html  _application_8hpp.html  _application_8hpp__dep__incl.map  _application_8hpp__dep__incl.md5  _application_8hpp__incl.map  _application_8hpp__incl.md5  _application_8hpp_source.html  _button_8cpp.html  _button_8cpp__incl.map  _button_8cpp__incl.md5  _button_8cpp_source.html  _button_8hpp.html  _button_8hpp__dep__incl.map  _button_8hpp__dep__incl.md5  _button_8hpp__incl.map  _button_8hpp__incl.md5  _button_8hpp_source.html  (+5401 more)
html/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.html  all_14.js  all_15.html  all_15.js  all_16.html  all_16.js  all_17.js  all_18.js  all_19.html  all_19.js  all_1a.html  all_1a.js  all_1b.html  all_1b.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_61.js  all_62.js  all_63.js  all_64.js  all_65.js  all_66.js  all_67.js  all_68.js  all_69.js  all_6b.js  all_6c.js  all_6d.js  all_6e.js  all_6f.js  all_7.js  (+294 more)
include/: Canvas.hpp  Color.hpp  ConfigImage.hpp  ConfigItem.hpp  ConfigPolygon.hpp  ConfigText.hpp  Event.hpp  Font.hpp  GraphicsAnimation.hpp  GraphicsBlinkAnimation.hpp  GraphicsFactory.hpp  GraphicsItem.hpp  GraphicsRectangle.hpp  GraphicsShape.hpp  GraphicsSquare.hpp  GraphicsText.hpp  GraphicsTriangle.hpp  KeyEvent.hpp  MainWindow.hpp  MouseEvent.hpp  Point.hpp  ToolsWindow.hpp  ToolsWindows.hpp  Toy.hpp  Window.hpp
src/: Canvas.cpp  Color.cpp  ConfigImage.cpp  ConfigItem.cpp  ConfigPolygon.cpp  ConfigText.cpp  GraphicsAnimation.cpp  GraphicsBlinkAnimation.cpp  GraphicsFactory.cpp  GraphicsItem.cpp  GraphicsLine.cpp  GraphicsPoint.cpp  GraphicsPolygon.hpp  GraphicsRectangle.cpp  GraphicsSquare.cpp  GraphicsText.cpp  MainWindow.cpp  Point.cpp  ToolsWindow.cpp  Window.cpp  main.cpp
super-ez-lib/: CMakeLists.txt
super-ez-lib/core/: CMakeLists.txt  README.md
super-ez-lib/core/include/: Application.hpp  Canvas.hpp  Color.hpp  Event.hpp  Font.hpp  GroupPoints.hpp  Image.hpp  KeyEvent.hpp  MouseEvent.hpp  Pixel.hpp  Point.hpp  UTF8Helper.hpp  Window.hpp
super-ez-lib/core/src/: Application.cpp  Canvas.cpp  Color.cpp  Event.cpp  Font.cpp  GroupPoints.cpp  Image.cpp  KeyEvent.cpp  MouseEvent.cpp  Pixel.cpp  Point.cpp  UTF8Helper.cpp  Window.cpp
super-ez-lib/core/tests/: PointTests.cpp  SerializationTests.cpp
super-ez-lib/graphics/: CMakeLists.txt  README.md
super-ez-lib/graphics/include/: GraphicsAnchor.hpp  GraphicsAnimation.hpp  GraphicsBlinkAnimation.hpp  GraphicsCircle.hpp  GraphicsEllipse.hpp  GraphicsImage.hpp  GraphicsItem.hpp  GraphicsLine.hpp  GraphicsPoint.hpp  GraphicsPolygon.hpp  GraphicsRectangle.hpp  GraphicsShape.hpp  GraphicsSquare.hpp  GraphicsText.hpp  GraphicsTriangle.hpp
super-ez-lib/graphics/src/: GraphicsAnchor.cpp  GraphicsAnimation.cpp  GraphicsBlinkAnimation.cpp  GraphicsCircle.cpp  GraphicsEllipse.cpp  GraphicsImage.cpp  GraphicsItem.cpp  GraphicsLine.cpp  GraphicsPoint.cpp  GraphicsPolygon.cpp  GraphicsRectangle.cpp  GraphicsShape.cpp  GraphicsSquare.cpp  GraphicsText.cpp  GraphicsTriangle.cpp
super-ez-lib/widget/: CMakeLists.txt  README.md
super-ez-lib/widget/include/: Button.hpp  Label.hpp  Layout.hpp  LineEdit.hpp  SpinBox.hpp  Widget.hpp
super-ez-lib/widget/src/: Button.cpp  Label.cpp  Layout.cpp  LineEdit.cpp  SpinBox.cpp  Widget.cpp
tests/: ColorTests.cpp
